# Thesis_Compiler_Aware_Model_Optimization_2026

./: .gitignore  README.md
report/: Thesis_Bukueva_Elena_2026.tex
thesis2026-project/: pyproject.toml
thesis2026-project/models/rf_yolov8n_skrews/: args.yaml  results.csv
thesis2026-project/models/rf_yolov8n_skrews_new/: args.yaml  results.csv
thesis2026-project/notebooks/: miscellaneous.ipynb
thesis2026-project/notebooks/val_results/rf_yolov8n_skrews_v2/: summary.txt
thesis2026-project/utils/: download_from_roboflow.py  upload_to_roboflow.py
