[project]
name = "thesis2026-project"
version = "0.1.0"
description = ""
authors = [
    {name = "helbuk",email = "alena-bukueva@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "ultralytics (>=8.4.6,<9.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "roboflow (>=1.2.13,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "thesis2026_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
